--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: architect
 title: Github Test Site
 description: Bookmark this to keep an eye on my project updates!
