--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: Architect
+remote_theme: pages-themes/architect@v0.2.0
 title: Github Test Site
 description: Bookmark this to keep an eye on my project updates!
