--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,5 @@
 remote_theme: pages-themes/architect@v0.2.0
 title: Github Test Site
 description: Bookmark this to keep an eye on my project updates!
-nav:
-  - Home: 'index.md'
-  - 'Test': 'test.md'
+show_downloads: true
+google_analytics: G-571V6LH0L0
